--- a/eSavjetovaliste/Gemfile
+++ b/eSavjetovaliste/Gemfile
@@ -43,3 +43,8 @@ gem 'pg'
 # gem 'debugger', group: [:development, :test]
 gem 'bcrypt-ruby', '~> 3.0.0'
 gem 'devise'
+group :development do
+	gem 'better_errors','0.0.8'
+	gem "binding_of_caller"
+end
+gem 'mandrill_mailer'
