--- a/eSavjetovaliste/Gemfile
+++ b/eSavjetovaliste/Gemfile
@@ -50,3 +50,9 @@ end
 gem 'mandrill_mailer'
 
 gem 'bootstrap-sass', '~>2.3.1.0'
+
+gem 'angular-rails-templates'
+
+gem 'bower-rails'
+
+gem 'angularjs-rails-resource', '~> 2.0.0'
