--- a/eSavjetovaliste/Gemfile
+++ b/eSavjetovaliste/Gemfile
@@ -54,3 +54,5 @@ gem 'bootstrap-sass', '~>2.3.1.0'
 gem 'angular-rails-templates'
 
 gem 'bower-rails'
+
+gem "recaptcha", :require => "recaptcha/rails"
